--- a/web4 special/index.html
+++ b/web4 special/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
     <div class="bar">
@@ -509,7 +510,7 @@
             </div>
         </div>
         <div class="copy" data-aos="fade-up" data-aos-eseing="ease-in-out" data-aos-duration="2000" data-aos-delay="500">
-            <h2>© Copyright Vicheka. All Rights Reserved</h2>
+            <h2>© Copyright Veasna & Vicheka. All Rights Reserved</h2>
             <h3>Designed by Ron Veasna Hold WebSite</h3>
         </div>
     </div>
